--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Location</string>
+    <string-array name="roles_array">
+        <item>Clients</item>
+        <item>Agents</item>
+    </string-array>
+
 </resources>
